--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -1,76 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:padding="6dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <data>
+        <variable
+            name="Products"
+            type="com.example.appdrawer.model.Products" />
+    </data>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
         android:padding="6dp">
-
-        <ImageView
-            android:id="@+id/imgProducts"
-            android:layout_width="120dp"
-            android:layout_height="155dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="6dp">
 
-            <TextView
-                android:id="@+id/nameProducts"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Title"
-                android:text="@{product.title}" />
-
-            <TextView
-                android:id="@+id/categProducts"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Category Products"
-                android:text="@{product.category}" />
-
-            <TextView
-                android:id="@+id/descProducts"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Description Products"
-                android:lines="3"
-                android:maxLines="3"
-                android:text="@{product.description}" />
+            <ImageView
+                android:id="@+id/imgProducts"
+                android:layout_width="120dp"
+                android:layout_height="155dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY" />
 
             <LinearLayout
-                android:id="@+id/layprice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:orientation="vertical"
+                android:padding="6dp">
 
-
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/nameProducts"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="favorite"
-                    android:onClick="fav"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_baseline_favorite_border_24" />
+                    android:hint="Title"
+                    android:text="@{Products.title}" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/categProducts"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="buy"
-                    android:onClick="buy"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_baseline_add_shopping_cart_24" />
+                    android:hint="Category Products" />
+
+                <TextView
+                    android:id="@+id/descProducts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Description Products"
+                    android:lines="3"
+                    android:maxLines="3" />
+                <TextView
+                    android:id="@+id/priceProducts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Description Products"
+                    android:lines="1"
+                    android:text="" />
+                <LinearLayout
+                    android:id="@+id/layprice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="favorite"
+                        android:onClick="fav"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_baseline_favorite_border_24" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="buy"
+                        android:onClick="buy"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_baseline_add_shopping_cart_24" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
